--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-
     <h1 class="heading-top">Hello world</h1>
 
 
@@ -37,6 +36,8 @@
         <hr>
         <br>
         <h2>footer site</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias, error, autem voluptatem commodi sequi, facere voluptate fugit perferendis aperiam possimus quidem sit dolor ad vel architecto ullam ea voluptas.</p>
         <br>
         <hr>
         <br>
