footerga yangi p tag qoshildi

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <h2>footer site</h2>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias, error, autem voluptatem commodi sequi, facere voluptate fugit perferendis aperiam possimus quidem sit dolor ad vel architecto ullam ea voluptas.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolorum adipisci, expedita sint perferendis nisi earum! Alias reprehenderit non eum, mollitia doloribus culpa repudiandae sed at similique eos architecto in illo, distinctio consequatur nihil ullam dicta qui saepe perspiciatis eveniet, et quisquam ab corrupti. Fugit hic ullam deleniti eaque error repudiandae qui sapiente id at illum magni sunt eum dolorem tempore rerum dicta, magnam corrupti non dignissimos illo! Sunt, eum!</p>
         <br>
         <hr>
         <br>
