men loyhaga btn va js file qoshdim

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         recusandae corporis obcaecati accusantium eum cum consectetur eius molestiae distinctio dolor, in placeat fugit
         cupiditate? Nulla voluptate eaque hic excepturi ex itaque asperiores reprehenderit non placeat magni,
         accusantium veritatis.</p>
+        <br>
+        <br>
+        
+        <button class="btn">Click My</button>
 
     <br>
     <br>
@@ -46,6 +50,9 @@
     </footer>
     <br>
     <br>
+
+
+    <script src="./index.js"></script>
 </body>
 
 </html>
